--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_1765795182FM"><div class="nodecontent">NPV, IRR etc.</div></li></ul></li>
 	<li class="basic" id="FMID_605033517FM"><div class="nodecontent">monte carlo risk assesment</div></li></ul></li>
-	<li class="col" id="FMID_1138378794FM"><div class="nodecontent">strategic analysis</div>
-		<ul class="subexp">
+	<li class="exp" id="FMID_1138378794FM"><div class="nodecontent">strategic analysis</div>
+		<ul class="sub">
 	<li class="basic" id="FMID_302097517FM"><div class="nodecontent">problems structurization</div></li>
 	<li class="basic" id="FMID_54903473FM"><div class="nodecontent">market boundaries description</div></li>
 	<li class="basic" id="FMID_1935910418FM"><div class="nodecontent">resources utilization analysis</div></li></ul></li></ul></li>
