added solar and urbanization

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	</script></head><body><div class="basetop"><a onclick="expandAll(document.getElementById('base'))" href="#">Expand</a> -
 <a onclick="collapseAll(document.getElementById('base'))" href="#">Collapse</a></div><div class="basetext" id="base"><ul>
 	<li class="col" id="FMID_754292294FM"><div class="boxed"><div class="nodecontent" style="font-size:133%;">Krzysztof Strug<br />extended CV</div><div class="note-and-attributes"><span class="note"><p>
-      This is extended version of CV, not intended to be read in detail. The goal is to provide some insight to points mentioned briefly in regular CV.
+      This is extended version of CV, not intended to be read in full. The goal is to provide more insight to points mentioned briefly in the regular CV that reader found intriguing.
     </p></span></div></div>
 		<ul class="subexp">
 	<li class="exp" id="FMID_1504603900FM"><div class="nodecontent">Personal Info</div>
@@ -155,7 +155,10 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_302097517FM"><div class="nodecontent">problems structurization</div></li>
 	<li class="basic" id="FMID_54903473FM"><div class="nodecontent">market boundaries description</div></li>
-	<li class="basic" id="FMID_1935910418FM"><div class="nodecontent">resources utilization analysis</div></li></ul></li></ul></li>
+	<li class="basic" id="FMID_1935910418FM"><div class="nodecontent">resources utilization analysis</div></li></ul></li>
+	<li class="exp" id="FMID_871529133FM"><div class="nodecontent">heating systems design</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1828081184FM"><div class="nodecontent">advising in solar &amp; heat pump heating systems planning</div></li></ul></li></ul></li>
 	<li class="col" id="FMID_598155470FM"><div class="nodecontent">Managment</div>
 		<ul class="subexp">
 	<li class="exp" id="FMID_1327824403FM"><div class="nodecontent">research project management</div>
@@ -265,7 +268,31 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_1319121036FM"><div class="nodecontent">technology niches/gaps</div></li>
 	<li class="basic" id="FMID_901471068FM"><div class="nodecontent">technology readiness assessment</div></li>
-	<li class="basic" id="FMID_867997421FM"><div class="nodecontent">innovation strategies</div></li></ul></li></ul></li>
+	<li class="basic" id="FMID_867997421FM"><div class="nodecontent">innovation strategies</div></li></ul></li>
+	<li class="exp" id="FMID_1132397788FM"><div class="nodecontent">infrastructure / urabnization</div>
+		<ul class="sub">
+	<li class="exp" id="FMID_1977961337FM"><div class="nodecontent">water and sewer systems</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1362022305FM"><div class="nodecontent">but also smart ways to go without a complex system</div></li></ul></li>
+	<li class="exp" id="FMID_628860915FM"><div class="nodecontent">electric grid</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_373039946FM"><div class="nodecontent">international connectors</div></li>
+	<li class="basic" id="FMID_115405015FM"><div class="nodecontent">off-grid installations</div></li>
+	<li class="basic" id="FMID_1874623732FM"><div class="nodecontent">energy markets</div></li>
+	<li class="basic" id="FMID_372877018FM"><div class="nodecontent">energy subsidy schemes</div></li></ul></li>
+	<li class="exp" id="FMID_291602651FM"><div class="nodecontent">traffic organization</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1016473470FM"><div class="nodecontent">low tempo zones</div></li>
+	<li class="basic" id="FMID_337335075FM"><div class="nodecontent">bike lanes</div></li>
+	<li class="exp" id="FMID_1147303744FM"><div class="nodecontent">logistics</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_24691136FM"><div class="nodecontent">rail vs trucks vs ships</div></li>
+	<li class="basic" id="FMID_1766375653FM"><div class="nodecontent">sustianbility and economics</div></li></ul></li>
+	<li class="basic" id="FMID_1884158680FM"><div class="nodecontent">public transport</div></li></ul></li>
+	<li class="exp" id="FMID_57780974FM"><div class="nodecontent">city / district zoning and composition</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_557979767FM"><div class="nodecontent">creating lively cities</div></li>
+	<li class="basic" id="FMID_619550873FM"><div class="nodecontent">mixing industry with residential and commerce</div></li></ul></li></ul></li></ul></li>
 	<li class="col" id="FMID_55762447FM"><div class="nodecontent">Economy</div>
 		<ul class="subexp">
 	<li class="exp" id="FMID_521333145FM"><div class="nodecontent">macroeconomics</div>
@@ -297,7 +324,13 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_599234406FM"><div class="nodecontent">biodiversity</div></li>
 	<li class="exp" id="FMID_1844046905FM"><div class="nodecontent">social inclusiveness</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_915138063FM"><div class="nodecontent">human rights</div></li></ul></li></ul></li></ul></li>
+	<li class="basic" id="FMID_915138063FM"><div class="nodecontent">human rights</div></li></ul></li></ul></li>
+	<li class="exp" id="FMID_65414322FM"><div class="nodecontent">openness</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1276741714FM"><div class="nodecontent">transparency</div></li>
+	<li class="basic" id="FMID_1174042665FM"><div class="nodecontent">open access</div></li>
+	<li class="basic" id="FMID_1387748318FM"><div class="nodecontent">open source</div></li>
+	<li class="basic" id="FMID_671056211FM"><div class="nodecontent">open science</div></li></ul></li></ul></li>
 	<li class="col" id="FMID_1900645200FM"><div class="nodecontent">Management</div>
 		<ul class="subexp">
 	<li class="exp" id="FMID_359097196FM"><div class="nodecontent">psychology</div>
@@ -308,12 +341,6 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_1705220864FM"><div class="nodecontent">engagement</div></li>
 	<li class="basic" id="FMID_340905882FM"><div class="nodecontent">rewarding system</div></li></ul></li>
-	<li class="exp" id="FMID_65414322FM"><div class="nodecontent">openness</div>
-		<ul class="sub">
-	<li class="basic" id="FMID_1276741714FM"><div class="nodecontent">transparency</div></li>
-	<li class="basic" id="FMID_1174042665FM"><div class="nodecontent">open access</div></li>
-	<li class="basic" id="FMID_1387748318FM"><div class="nodecontent">open source</div></li>
-	<li class="basic" id="FMID_671056211FM"><div class="nodecontent">open science</div></li></ul></li>
 	<li class="exp" id="FMID_774364916FM"><div class="nodecontent">strategy development</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1292701279FM"><div class="nodecontent">values</div></li>
@@ -376,12 +403,14 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_1694370808FM"><div class="nodecontent">2006</div></li>
 	<li class="basic" id="FMID_5812937FM"><div class="nodecontent">human rights NGO</div></li>
-	<li class="basic" id="FMID_584772607FM"><div class="nodecontent">fundraising</div></li></ul></li>
+	<li class="basic" id="FMID_584772607FM"><div class="nodecontent">fundraising</div></li>
+	<li class="basic" id="FMID_1260687382FM"><div class="nodecontent"><a href="http://amnesty.org.pl/">link</a> <a href="http://amnesty.org.pl/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li>
 	<li class="exp" id="FMID_676708788FM"><div class="nodecontent">Zielone Mazowsze</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_379636358FM"><div class="nodecontent">2005 -2007</div></li>
 	<li class="basic" id="FMID_1105307150FM"><div class="nodecontent">local, Warsaw green watchdog</div></li>
-	<li class="basic" id="FMID_1440177233FM"><div class="nodecontent">public transport evaluation projects</div></li></ul></li></ul></li></ul></li>
+	<li class="basic" id="FMID_1440177233FM"><div class="nodecontent">public transport evaluation projects</div></li>
+	<li class="basic" id="FMID_372150624FM"><div class="nodecontent"><a href="http://www.zm.org.pl/">link</a> <a href="http://www.zm.org.pl/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li></ul></li></ul></li>
 	<li class="col" style="background-color:#ff99ff;" id="FMID_851668007FM"><div class="nodecontent">Education</div>
 		<ul class="subexp">
 	<li class="col" id="FMID_651311555FM"><div class="nodecontent">BEng</div>
