added solar and urbanization

--- a/index.html
+++ b/index.html
@@ -9,30 +9,18 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="subexp">
 	<li class="exp" id="FMID_1504603900FM"><div class="nodecontent">Personal Info</div>
 		<ul class="sub">
-	<li class="exp" id="FMID_1246564309FM"><div class="nodecontent">e-mail</div>
+	<li class="exp" id="FMID_1264322502FM"><div class="nodecontent">Contact</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_419803364FM"><div class="nodecontent">krzysztof@strug.xyz</div></li>
-	<li class="col" id="FMID_412361503FM"><div class="nodecontent">alternative:</div>
+	<li class="basic" id="FMID_94879606FM"><div class="nodecontent">Please see other sources for email and phone</div></li></ul></li>
+	<li class="col" id="FMID_1797690726FM"><div class="nodecontent">Born</div>
 		<ul class="subexp">
-	<li class="basic" id="FMID_439164196FM"><div class="nodecontent">strug@10g.pl</div></li></ul></li></ul></li>
-	<li class="exp" id="FMID_1083389765FM"><div class="nodecontent">Phone</div>
-		<ul class="sub">
-	<li class="basic" id="FMID_564104472FM"><div class="nodecontent">044 747 6539 302</div></li>
-	<li class="col" id="FMID_1109607758FM"><div class="nodecontent">alternative:</div>
-		<ul class="subexp">
-	<li class="basic" id="FMID_104637009FM"><div class="nodecontent">+48 698 926 732</div></li></ul></li></ul></li>
-	<li class="exp" id="FMID_1797690726FM"><div class="nodecontent">Born</div>
-		<ul class="sub">
 	<li class="basic" id="FMID_42491660FM"><div class="nodecontent">1982-07-25</div></li>
-	<li class="col" id="FMID_242752593FM"><div class="nodecontent">in Gdynia</div>
-		<ul class="subexp">
+	<li class="exp" id="FMID_242752593FM"><div class="nodecontent">in Gdynia</div>
+		<ul class="sub">
 	<li class="basic" id="FMID_1939074663FM"><div class="nodecontent">Northern Poland</div></li></ul></li></ul></li>
-	<li class="exp" id="FMID_304667630FM"><div class="nodecontent">Adress</div>
-		<ul class="sub">
-	<li class="basic" id="FMID_171890046FM"><div class="nodecontent">12 George Nuttall Close<br />CB4 1YE<br />Cambridge<br />UK</div></li>
-	<li class="exp" id="FMID_1696618481FM"><div class="nodecontent">previous/alternative</div>
-		<ul class="sub">
-	<li class="basic" id="FMID_313278897FM"><div class="nodecontent">ul. Magiera 26 m.37<br />01-856 Warszawa<br />Poland</div></li></ul></li></ul></li>
+	<li class="col" id="FMID_304667630FM"><div class="nodecontent">Curent place of residence</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_171890046FM"><div class="nodecontent">Cambridge, UK</div></li></ul></li>
 	<li class="exp" id="FMID_1802514922FM"><div class="nodecontent">Social media</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1001086327FM"><div class="nodecontent"><a href="https://twitter.com/strugkr">twitter</a> <a href="https://twitter.com/strugkr"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
