added words like adress and number

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="subexp">
 	<li class="exp" id="FMID_1504603900FM"><div class="nodecontent">Personal Info</div>
 		<ul class="sub">
-	<li class="exp" id="FMID_1264322502FM"><div class="nodecontent">Contact</div>
-		<ul class="sub">
-	<li class="basic" id="FMID_94879606FM"><div class="nodecontent">Please see other sources for email and phone</div></li></ul></li>
+	<li class="col" id="FMID_1264322502FM"><div class="nodecontent">Contact</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_94879606FM"><div class="nodecontent">Please see other sources for email adress and phone number</div></li></ul></li>
 	<li class="col" id="FMID_1797690726FM"><div class="nodecontent">Born</div>
 		<ul class="subexp">
 	<li class="basic" id="FMID_42491660FM"><div class="nodecontent">1982-07-25</div></li>
