typo in kohonen and clarifing APh

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_1322683460FM"><div class="nodecontent">group of technologies aiming at producing chemical fuel from solar radiation and abundant substances (like H2O or CO2)</div></li>
 	<li class="basic" id="FMID_1958837525FM"><div class="nodecontent">natural photosynthesis has very low efficiency (~1%)</div></li>
-	<li class="basic" id="FMID_1275274644FM"><div class="nodecontent">artificial photosynthesis should be more efficient and the product should easier to handle and store</div></li></ul></li>
+	<li class="basic" id="FMID_1275274644FM"><div class="nodecontent">relativly to biomass artificial photosynthesis should be more efficient and the product should easier to handle and store</div></li></ul></li>
 	<li class="exp" id="FMID_1975823282FM"><div class="nodecontent">solar thermal</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_958061167FM"><div class="nodecontent">using high exergy sources for heating domestic hot water and heating buildings,</div></li>
@@ -377,7 +377,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="exp" id="FMID_593435763FM"><div class="nodecontent">summary</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1925325655FM"><div class="nodecontent">Consulting individual and industry clients; design of large solar heating plants; giving solar energy lectures to heating system installers.</div></li></ul></li></ul></li>
-	<li class="exp" id="FMID_709753113FM"><div class="nodecontent">other early experienses</div>
+	<li class="exp" id="FMID_709753113FM"><div class="nodecontent">other (early) experienses</div>
 		<ul class="sub">
 	<li class="exp" id="FMID_1453838897FM"><div class="nodecontent">Transition Technologies (TT)</div>
 		<ul class="sub">
@@ -385,7 +385,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_754066134FM"><div class="nodecontent">artificial inteligence and control systems</div></li>
 	<li class="exp" id="FMID_984785432FM"><div class="nodecontent">internship and MSc thesis</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_1825406288FM"><div class="nodecontent">"Selforganiazing Kohenen neural networks usability <br />in energy market transactions evaluations"</div></li></ul></li>
+	<li class="basic" id="FMID_1825406288FM"><div class="nodecontent">"Selforganising Kohenen neural networks usability <br />in energy market transactions evaluations"</div></li></ul></li>
 	<li class="basic" id="FMID_730461805FM"><div class="nodecontent"><a href="http://tt.com.pl/en/">link</a> <a href="http://tt.com.pl/en/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li>
 	<li class="exp" id="FMID_1343689347FM"><div class="nodecontent">Amnesty International</div>
 		<ul class="sub">
