schools and typo in urbanisation

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_1319121036FM"><div class="nodecontent">technology niches/gaps</div></li>
 	<li class="basic" id="FMID_901471068FM"><div class="nodecontent">technology readiness assessment</div></li>
 	<li class="basic" id="FMID_867997421FM"><div class="nodecontent">innovation strategies</div></li></ul></li>
-	<li class="exp" id="FMID_1132397788FM"><div class="nodecontent">infrastructure / urabnization</div>
+	<li class="exp" id="FMID_1132397788FM"><div class="nodecontent">infrastructure / urbanization</div>
 		<ul class="sub">
 	<li class="exp" id="FMID_1977961337FM"><div class="nodecontent">water and sewer systems</div>
 		<ul class="sub">
@@ -481,7 +481,22 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_973052383FM"><div class="nodecontent">Introduction to Data Science</div></li></ul></li>
 	<li class="exp" id="FMID_900181253FM"><div class="nodecontent">Planned:</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_349263206FM"><div class="nodecontent">many more</div></li></ul></li></ul></li></ul></li>
+	<li class="basic" id="FMID_349263206FM"><div class="nodecontent">many more</div></li></ul></li></ul></li>
+	<li class="exp" id="FMID_1553402818FM"><div class="nodecontent">Schools</div>
+		<ul class="sub">
+	<li class="col" id="FMID_1814160489FM"><div class="nodecontent">VI^th HIgh School in Warsaw</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_755024178FM"><div class="nodecontent">T. Reytan</div></li>
+	<li class="basic" id="FMID_1073492923FM"><div class="nodecontent">1999-2001</div></li>
+	<li class="basic" id="FMID_1745044675FM"><div class="nodecontent">maths-phys profile</div></li></ul></li>
+	<li class="col" id="FMID_1531860811FM"><div class="nodecontent">II^nd High School in Gdynia</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_1835356871FM"><div class="nodecontent">A. Mickiewicz</div></li>
+	<li class="basic" id="FMID_1655413815FM"><div class="nodecontent">1997-1999</div></li>
+	<li class="basic" id="FMID_994550681FM"><div class="nodecontent">maths-phys profile</div></li></ul></li>
+	<li class="col" id="FMID_1688380674FM"><div class="nodecontent">43^rd Primary School in Gdynia</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_642771542FM"><div class="nodecontent">1988-1997</div></li></ul></li></ul></li></ul></li>
 	<li class="col" style="background-color:#ffff99;" id="FMID_1686734184FM"><div class="nodecontent">Skills</div>
 		<ul class="subexp">
 	<li class="exp" id="FMID_1081452129FM"><div class="nodecontent">Languages</div>
