trzy literowki co ojciec zauwazyl

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="subexp">
 	<li class="exp" id="FMID_1030153086FM"><div class="nodecontent">mathematical modeling</div>
 		<ul class="sub">
+	<li class="exp" id="FMID_1812718384FM"><div class="nodecontent">devices</div>
+		<ul class="sub">
 	<li class="exp" id="FMID_605894353FM"><div class="nodecontent">boilers</div>
 		<ul class="sub">
 	<li class="exp" id="FMID_1348287835FM"><div class="nodecontent">oxy-combustion</div>
@@ -48,11 +50,9 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="exp" id="FMID_1354905100FM"><div class="nodecontent">fuel cells</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_3106314FM"><div class="nodecontent">Solid Oxide Fuel Cells systems</div></li>
-	<li class="basic" id="FMID_432669230FM"><div class="nodecontent">SOFC stacks</div></li></ul></li>
-	<li class="exp" id="FMID_1160448367FM"><div class="nodecontent">biogas utilization</div>
+	<li class="basic" id="FMID_432669230FM"><div class="nodecontent">SOFC stacks</div></li></ul></li></ul></li>
+	<li class="exp" id="FMID_251455360FM"><div class="nodecontent">systems</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_597672844FM"><div class="nodecontent">biogas fired engines modeling</div></li>
-	<li class="basic" id="FMID_1714719195FM"><div class="nodecontent">turbocompressors influence on efficiency</div></li></ul></li>
 	<li class="exp" id="FMID_1966420383FM"><div class="nodecontent">power plants optimization</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1996936385FM"><div class="nodecontent">efficiency as a function of heat exchangers and gas composition functions</div></li></ul></li>
@@ -61,7 +61,16 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_373930938FM"><div class="nodecontent">steam powet plants</div></li>
 	<li class="basic" id="FMID_1025633273FM"><div class="nodecontent">gas turbines</div></li>
 	<li class="basic" id="FMID_1209035913FM"><div class="nodecontent">internal combustion engines</div></li>
-	<li class="basic" id="FMID_891985460FM"><div class="nodecontent">adsorption cooling cycles</div></li></ul></li></ul></li>
+	<li class="basic" id="FMID_891985460FM"><div class="nodecontent">adsorption cooling cycles</div></li></ul></li>
+	<li class="basic" id="FMID_944005686FM"><div class="nodecontent">smart district heating</div></li></ul></li>
+	<li class="exp" id="FMID_854127637FM"><div class="nodecontent">processes</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_993937946FM"><div class="nodecontent">heat exchange</div></li>
+	<li class="basic" id="FMID_1412454800FM"><div class="nodecontent">mass transfer</div></li>
+	<li class="exp" id="FMID_1489249379FM"><div class="nodecontent">chemical reactions</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1206489965FM"><div class="nodecontent">combustion</div></li>
+	<li class="basic" id="FMID_1711765389FM"><div class="nodecontent">pollutants decomposition</div></li></ul></li></ul></li></ul></li>
 	<li class="exp" id="FMID_265548472FM"><div class="nodecontent">technology development</div>
 		<ul class="sub">
 	<li class="exp" id="FMID_1575734910FM"><div class="nodecontent">biomass CHP</div>
@@ -122,7 +131,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_1530998952FM"><div class="nodecontent">other</div></li></ul></li></ul></li>
 	<li class="col" id="FMID_1958144987FM"><div class="nodecontent">Consulting</div>
 		<ul class="subexp">
-	<li class="exp" id="FMID_852698373FM"><div class="nodecontent">feasability sudies</div>
+	<li class="exp" id="FMID_852698373FM"><div class="nodecontent">feasibility sudies</div>
 		<ul class="sub">
 	<li class="exp" id="FMID_1124717673FM"><div class="nodecontent">energy sector</div>
 		<ul class="sub">
@@ -397,7 +406,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="exp" id="FMID_593435763FM"><div class="nodecontent">summary</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1925325655FM"><div class="nodecontent">Consulting individual and industry clients; design of large solar heating plants; giving solar energy lectures to heating system installers.</div></li></ul></li></ul></li>
-	<li class="exp" id="FMID_709753113FM"><div class="nodecontent">other (early) experienses</div>
+	<li class="exp" id="FMID_709753113FM"><div class="nodecontent">other (early) experiences</div>
 		<ul class="sub">
 	<li class="exp" id="FMID_1453838897FM"><div class="nodecontent">Transition Technologies (TT)</div>
 		<ul class="sub">
