wiki and AUR and some IT specs

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_1773500032FM"><div class="nodecontent">Particulate matter</div></li>
 	<li class="basic" id="FMID_1961586853FM"><div class="nodecontent">ash - ammonia interactions</div></li>
 	<li class="basic" id="FMID_772164448FM"><div class="nodecontent">Influence of these interaction on ESP performance</div></li></ul></li></ul></li></ul></li>
-	<li class="exp" id="FMID_397419546FM"><div class="nodecontent">ontology of technology</div>
+	<li class="exp" id="FMID_397419546FM"><div class="nodecontent">ontology of technologies</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1013149849FM"><div class="nodecontent">development of tool for assesement of technologies basing on graphene</div></li>
 	<li class="basic" id="FMID_145112232FM"><div class="nodecontent">the tool used technology maps of technology to predict feasibility of new ideas</div></li></ul></li></ul></li>
@@ -140,7 +140,8 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_1733620802FM"><div class="nodecontent">industrial power and heat sources</div></li></ul></li>
 	<li class="exp" id="FMID_1103946018FM"><div class="nodecontent">data science solutions</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_1839848276FM"><div class="nodecontent">taxonomy</div></li>
+	<li class="basic" id="FMID_1839848276FM"><div class="nodecontent">technology taxonomy</div></li>
+	<li class="basic" id="FMID_502533719FM"><div class="nodecontent">fraud taxonomy</div></li>
 	<li class="basic" id="FMID_1103117990FM"><div class="nodecontent">churn prediction</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_1344540773FM"><div class="nodecontent">techno-economic evaluations</div>
 		<ul class="sub">
@@ -277,9 +278,17 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="exp" id="FMID_1391787549FM"><div class="nodecontent">information technologies</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_84882437FM"><div class="nodecontent">computer science</div></li>
-	<li class="basic" id="FMID_1265406626FM"><div class="nodecontent">machine learning</div></li>
-	<li class="basic" id="FMID_123841632FM"><div class="nodecontent">interoperability</div></li>
-	<li class="basic" id="FMID_1868286893FM"><div class="nodecontent">free and open source software</div></li></ul></li>
+	<li class="exp" id="FMID_1265406626FM"><div class="nodecontent">machine learning</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_708121180FM"><div class="nodecontent">a.k.a. data mining</div></li>
+	<li class="basic" id="FMID_1914087418FM"><div class="nodecontent">a.k.a. artificial intelligence</div></li></ul></li>
+	<li class="exp" id="FMID_123841632FM"><div class="nodecontent">interoperability</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1913572975FM"><div class="nodecontent">standards in interfaces allow divesity and complexity</div></li></ul></li>
+	<li class="exp" id="FMID_1868286893FM"><div class="nodecontent">free and open source software</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1984130090FM"><div class="nodecontent">GNU/Linux</div></li>
+	<li class="basic" id="FMID_1211308954FM"><div class="nodecontent">exploring possibilities of software</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_1151034017FM"><div class="nodecontent">emerging/disruptive technologies</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1319121036FM"><div class="nodecontent">technology niches/gaps</div></li>
@@ -427,7 +436,26 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_379636358FM"><div class="nodecontent">2005 -2007</div></li>
 	<li class="basic" id="FMID_1105307150FM"><div class="nodecontent">local, Warsaw green watchdog</div></li>
 	<li class="basic" id="FMID_1440177233FM"><div class="nodecontent">public transport evaluation projects</div></li>
-	<li class="basic" id="FMID_372150624FM"><div class="nodecontent"><a href="http://www.zm.org.pl/">link</a> <a href="http://www.zm.org.pl/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li></ul></li></ul></li>
+	<li class="basic" id="FMID_372150624FM"><div class="nodecontent"><a href="http://www.zm.org.pl/">link</a> <a href="http://www.zm.org.pl/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li>
+	<li class="exp" id="FMID_546877003FM"><div class="nodecontent">Zielone Wiadomości</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_428547699FM"><div class="nodecontent">2013-2015</div></li>
+	<li class="basic" id="FMID_1835552738FM"><div class="nodecontent">translating articles from english to polish</div></li>
+	<li class="basic" id="FMID_1270047850FM"><div class="nodecontent">topics surrounding climate and finance</div></li></ul></li>
+	<li class="exp" id="FMID_1570123299FM"><div class="nodecontent">other minor volunteering</div>
+		<ul class="sub">
+	<li class="exp" id="FMID_775551776FM"><div class="nodecontent">AUR package maintainer</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1462585739FM"><div class="nodecontent">Arch User Repository</div></li>
+	<li class="basic" id="FMID_432229354FM"><div class="nodecontent">Arch Linux</div></li>
+	<li class="basic" id="FMID_301430921FM"><div class="nodecontent">2013-now</div></li>
+	<li class="basic" id="FMID_486948588FM"><div class="nodecontent"><a href="https://aur4.archlinux.org/packages/firefox-aurora-pl">package link</a> <a href="https://aur4.archlinux.org/packages/firefox-aurora-pl"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li>
+	<li class="exp" id="FMID_18779577FM"><div class="nodecontent">Wikipedia editor</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1768381180FM"><div class="nodecontent">2003-now</div></li>
+	<li class="basic" id="FMID_921872015FM"><div class="nodecontent">1000+ edits</div></li>
+	<li class="basic" id="FMID_913973608FM"><div class="nodecontent"><a href="https://pl.wikipedia.org/w/index.php?title=Specjalna:Wk%C5%82ad/Strug&amp;dir=prev&amp;offset=20040203224739&amp;limit=500&amp;target=Strug">mostly polish wikipedia</a> <a href="https://pl.wikipedia.org/w/index.php?title=Specjalna:Wk%C5%82ad/Strug&amp;dir=prev&amp;offset=20040203224739&amp;limit=500&amp;target=Strug"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
+	<li class="basic" id="FMID_898172762FM"><div class="nodecontent"><a href="https://en.wikipedia.org/w/index.php?limit=50&amp;tagfilter=&amp;title=Special%3AContributions&amp;contribs=user&amp;target=Strug">english is still lean</a> <a href="https://en.wikipedia.org/w/index.php?limit=50&amp;tagfilter=&amp;title=Special%3AContributions&amp;contribs=user&amp;target=Strug"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li></ul></li></ul></li></ul></li>
 	<li class="col" style="background-color:#ff99ff;" id="FMID_851668007FM"><div class="nodecontent">Education</div>
 		<ul class="subexp">
 	<li class="col" id="FMID_651311555FM"><div class="nodecontent">BEng</div>
