--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_1058077561FM"><div class="nodecontent">2014-2015</div></li>
 	<li class="basic" id="FMID_209790919FM"><div class="nodecontent">Senior Researcher</div></li>
+	<li class="basic" id="FMID_1696507370FM"><div class="nodecontent">Warsaw / Cambridge, PL/UK</div></li>
 	<li class="basic" id="FMID_1937236026FM"><div class="nodecontent"><a href="http://maths.com.pl/?q=english">link</a> <a href="http://maths.com.pl/?q=english"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
 	<li class="exp" id="FMID_792106149FM"><div class="nodecontent">summary</div>
 		<ul class="sub">
@@ -393,6 +394,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_1342662409FM"><div class="nodecontent">April-August 2013</div></li>
 	<li class="basic" id="FMID_1773025559FM"><div class="nodecontent">Visiting Researcher</div></li>
+	<li class="basic" id="FMID_838238692FM"><div class="nodecontent">Petten / Alkmaar, NL</div></li>
 	<li class="basic" id="FMID_1977833948FM"><div class="nodecontent"><a href="https://www.ecn.nl/">link</a> <a href="https://www.ecn.nl/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
 	<li class="exp" id="FMID_592071557FM"><div class="nodecontent">summary</div>
 		<ul class="sub">
@@ -402,6 +404,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_739804188FM"><div class="nodecontent">2007-2014</div></li>
 	<li class="basic" id="FMID_294391565FM"><div class="nodecontent">Thermal Processes Department</div></li>
 	<li class="basic" id="FMID_1685134537FM"><div class="nodecontent">Engineer</div></li>
+	<li class="basic" id="FMID_66034767FM"><div class="nodecontent">Warsaw, PL</div></li>
 	<li class="basic" id="FMID_885645576FM"><div class="nodecontent"><a href="https://ien.com.pl/cpc-thermal-processing-department">link</a> <a href="https://ien.com.pl/cpc-thermal-processing-department"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
 	<li class="exp" id="FMID_1343903865FM"><div class="nodecontent">summary</div>
 		<ul class="sub">
